# LS-MED-ImageCompression

./: CMakeLists.txt  README.txt  ansResidual.cpp  ansResidual.h  imageIO.cpp  imageIO.h  main.cpp  predictor.cpp  predictor.h  residualIO.cpp  residualIO.h
tests/: predictor_tests.cpp  predictor_tests.h  test_imageIO.cpp  test_imageIO.h
